@@ -516,7 +516,10 @@ bool CmdInterpreter::query(string text, bool priority)
     }
     result = test;
     text += suffix;
-    line = readline(text.c_str());
+    synth->getRuntime().Log(text);
+    // changed this so that all messages go to same destination.
+    //line = readline(text.c_str());
+    line = readline("");
     if (line)
     {
         if (line[0] != 0)
@@ -5527,14 +5530,25 @@ Reply CmdInterpreter::cmdIfaceProcessCommand(Parser& input)
         if (input.matchnMove(1, "bank"))
         {
             int slot;
+            int root = readControl(synth, 0, BANK::control::selectRoot, TOPLEVEL::section::bank);
+            bool found = false;
             for (slot = 0; slot < MAX_BANKS_IN_ROOT; ++slot)
             {
-                if (synth->getBankRef().getBankName(slot).empty())
+                if (synth->getBankRef().getBankName(slot, root).empty())
+                {
+                    found = true;
                     break;
+                }
+            }
+            if (!found)
+            {
+                Runtime.Log("Current root has no space!");
+                return Reply::DONE;
             }
             if (!synth->getBankRef().newIDbank(string{input}, (unsigned int)slot))
             {
                 Runtime.Log("Could not create bank " + string{input} + " for ID " + asString(slot));
+                return Reply::DONE;
             }
 
             Runtime.Log("Created  new bank " + string{input} + " with ID " + asString(slot));
@@ -5630,47 +5644,47 @@ Reply CmdInterpreter::cmdIfaceProcessCommand(Parser& input)
         }
         if (input.matchnMove(1, "bank"))
         {
-            int rootID = UNUSED;
-            if (input.matchnMove(1, "root"))
-            {
-                if (input.isdigit())
-                    rootID = string2int(input);
-                if (rootID >= MAX_BANK_ROOT_DIRS)
-                    return Reply{REPLY::range_msg};
-            }
-            if (input.isdigit())
-            {
-                input.skipChars();
-                int bankID = string2int(input);
-                if (bankID >= MAX_BANKS_IN_ROOT)
-                    return Reply{REPLY::range_msg};
-                else
-                {
-                    string filename = synth->getBankRef().getBankName(bankID);
-                    if (filename.empty())
-                        Runtime.Log("No bank at this location");
-                    else
-                    {
-                        int tmp = synth->getBankRef().getBankSize(bankID);
-                        if (tmp)
-                        {
-                            Runtime.Log("Bank " + filename + " has " + asString(tmp) + " Instruments");
-                            if (query("Delete bank and all of these", false))
-                                tmp = 0;
-                            else
-                                Runtime.Log("Aborted");
-                        }
-                        if (tmp == 0)
-                        {
-                            sendDirect(synth, TOPLEVEL::action::lowPrio, bankID, TOPLEVEL::type::Write, MAIN::control::deleteBank, TOPLEVEL::section::main, rootID);
-                        }
-                    }
+            if (!input.isdigit())
+                return Reply{REPLY::value_msg};
 
+            int bankID = string2int(input);
+            if (bankID >= MAX_BANKS_IN_ROOT)
+                return Reply{REPLY::range_msg};
+
+            int rootID = readControl(synth, 0, BANK::control::selectRoot, TOPLEVEL::section::bank);
+            input.skipChars();
+            if (!input.isAtEnd())
+            {
+                if (input.matchnMove(1, "root"))
+                {
+                    if (!input.isdigit())
+                        return Reply{REPLY::value_msg};
+                    rootID = string2int(input);
+                    if (rootID >= MAX_BANK_ROOT_DIRS)
+                        return Reply{REPLY::range_msg};
                 }
+            }
+
+            string filename = synth->getBankRef().getBankName(bankID, rootID);
+            if (filename.empty())
+            {
+                Runtime.Log("No bank at this location");
                 return Reply::DONE;
             }
-            else
-                return Reply{REPLY::value_msg};
+
+            int tmp = synth->getBankRef().getBankSize(bankID, readControl(synth, 0, BANK::control::selectRoot, TOPLEVEL::section::bank));
+            std::cout << "ID " << bankID << "  name " << filename << std::endl;
+            if (tmp)
+            {
+                Runtime.Log("Bank " + filename + " has " + asString(tmp) + " Instruments");
+                if (!query("Delete bank and all of these", false))
+                {
+                    Runtime.Log("Aborted");
+                    return Reply::DONE;
+                }
+            }
+            sendDirect(synth, TOPLEVEL::action::lowPrio, bankID, TOPLEVEL::type::Write, MAIN::control::deleteBank, TOPLEVEL::section::main, rootID);
+            return Reply::DONE;
         }
         if(input.matchnMove(2, "yoshimi"))
         {
